# bioinformatics-stronghold

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  README.md  pyproject.toml  rosalind_tree.txt
.github/workflows/: ci.yaml
rosalind/: alignment.py  assembly.py  cli.py  combinatorics.py  graph.py  helpers.py  mass.py  probability.py  reversal_distance.py  rosalind.py  sets.py
tests/: test_cli.py  test_rosalind.py
tests/data/: test_gaff.txt  test_gaff1.txt  test_gaff2.txt  test_gaff3.txt  test_gaff4.txt  test_ksim.txt
tests/snapshots/: snap_test_cli.py
