[tool.poetry]
name = "rosalind"
version = "0.1.0"
description = "Simple (possibly brute force) solutions to the Rosalind problems"
authors = ["Daniel Halligan <dan.halligan@fiosgenomics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.0.8"
bio = "^0.3.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rosalind = "rosalind.cli:main"

