[tool.poetry]
name = "rosalind"
version = "0.2.0"
description = "Simple (possibly brute force) solutions to the Rosalind problems"
authors = ["Daniel Halligan <dan.halligan@fiosgenomics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.0.8"
numpy = "^1.20.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.10.1"
pytest = "^5.2"
flake8 = "^3.8.4"
twine = "^3.3.0"
snapshottest = "^0.6.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rosalind = "rosalind.cli:main"
